	* drivers/mtd/at24xx.c: Driver for I2C-based at24cxx EEPROM submitted by
	  Li Zhuoyi (Lzyy).
	* arch/arm/src/lpc17xx/lpc17_i2c.c: I2C driver for the NXP LPC17xx family
	  submitted by Li Zhuoyi (Lzyy)
	* arch/arm/src/stm32_i2c.c:  Correct two issues with the STM32 I2C driver:
	  (1) Clocking needs to be based on PCLK1, not HCLK and fast speed settings
	  need some additional bits; and (2) Correct a hang that will occur on
	  I2C1 if FSMC is also enabled.
	* drivers/sensors/lm75.c and include/nuttx/sensors/lm75.h:  Add an LM-75
	  temperature sensor driver.
	* configs/stm3210e-eval/src/up_lm75.c:  Add support for the LM-75 on the
	  STMicro STM3210E-EVAL board.
	* sched/clock_gettime.c:  Correct an error in the tv_nsec calculation
	  that happens only config CONFIG_RTC is enabled.
	* arch/arm/src/stm32/stm32_i2c.c:  Correct some bugs related to waiting
	  for the I2C STOP condition to be cleared.

6.10 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* lib/stdio/lib_fopen.c:  Fix an error in fopen(); the file pointer was not
	  being positioned at the end of the file when the "a" and "a+" modes are
	  used.  There are other issues with the "a+" modes (see the top-level TODO
	  list).
	* drivers/usbdev/cdc_serial.c and include/nuttx/usb/cdc.h and cdc_serial.h:
	  Add support for the CDC ACM serial device class.
	* fs/fat/fs_fat32.c: Fix a critical bug in the write logic:  It a tiny write
	  cross a sector boundary, then two sector writes will occur.  The first part
	  in the first sector may be written to the wrong sector number.
	* fs/fat/fs_fat32util.c:  Fix a stray write into the FAT (always sector 964 on
	  FAT32).  This bug will cause some lost chains.  I'm sure this bug could
	  corrupt files but at present, the only thing I have seen is that before
	  fixing this bug, the Windows chkdsk utility would report these lost chains.
	* arch/arm/src/stm32/stm32_i2c.c: Driver can now operate in a faster polled
	  mode (at the expense of using more cpu cycles).